--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/Jefry04/clon-youtube/issues"
   },
-  "homepage": "https://github.com/Jefry04/clon-youtube#readme"
+  "homepage": "https://github.com/Jefry04/clon-youtube#readme",
+  "devDependencies": {
+    "eslint": "^8.15.0"
+  }
 }
